<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item-->
<!--        android:id="@+id/navigation_home"-->
<!--        android:icon="@drawable/ic_home_black_24dp"-->
<!--        android:title="@string/title_home" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_dashboard" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications" />-->

    <item
        android:id="@+id/navigation_status"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_status" />

    <item
        android:id="@+id/navigation_control"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_control" />

    <item
        android:id="@+id/navigation_log"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_log" />

</menu>