<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_marginBottom="?attr/actionBarSize">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_daemon_status"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_refresh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/text_daemonStatus" />

            <Button
                android:id="@+id/button_refresh"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_refresh_status" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_tailscaleIp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_status"
            android:padding="8dp"
            android:background="#EEEEEE"
            android:textIsSelectable="true" />
    </LinearLayout>
</ScrollView>
