<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/up_options_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.UpOptionsFragment"
        android:layout_marginBottom="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

<!--            &lt;!&ndash; 返回按钮 &ndash;&gt;-->
<!--            <Button-->
<!--                android:id="@+id/btn_back_control"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/button_return" />-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/gateway_label"
                    app:layout_constraintBottom_toBottomOf="@+id/gateway_confirm"
                    app:layout_constraintEnd_toStartOf="@+id/gateway_confirm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/text_gateway"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/gateway_confirm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="4:3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.15"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/button_apply_gateway" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <EditText
                android:id="@+id/edit_login_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_route"
                android:importantForAutofill="no"
                android:inputType="textUri" />

            <CheckBox
                android:id="@+id/ipv4_forwarding_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forward_v4" />

            <CheckBox
                android:id="@+id/ipv6_forwarding_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forward_v6" />

            <CheckBox
                android:id="@+id/use_proxy_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="使用代理" />

            <Button
                android:id="@+id/add_dns_nameserver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dns_nameserver"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>